# apps/api/src/finance/dto/PaginatedTickerSyncHealth.dto.ts
@@ -1,0 +1,6 @@
+import { PaginatedResponseDto } from '../../shared/PaginatedResponse.dto';
+import { TickerSyncHealthDto } from './TickerSyncHealth.dto';
+
+export class PaginatedTickerSyncHealthDto extends PaginatedResponseDto(
+  TickerSyncHealthDto,
+) {}
